--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,10 +2,10 @@
 site_name: Dunasty8 - Los Galactique RP
 
 # URL du dépôt GitHub
-repo_url: https://github.com/Jefedi/ImmoWiki
+repo_url: https://github.com/Jefedi/dynasty8-Los-Galactique-RP.git
 
 # Nom du dépôt GitHub
-repo_name: Jefedi/ImmoWiki
+repo_name: Jefedi/dynasty8-Los-Galactique-RP
 
 # Navigation du site
 nav:
