--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,12 +39,12 @@ nav:
   - Legal: 
     - pages/legal/index.md
     - pages/legal/politique.md
-  # - Page Test:
-  #     test.md
   - Nous Aider a Ameliorer le Site:
     - amelioration_du_site/index.md
     - amelioration_du_site/CONTRIBUTING.md
     - amelioration_du_site/CODE_OF_CONDUCT.md
+  - Page Test:
+      test.md
 
 
 
