--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ nav:
     - amelioration_du_site/index.md
     - amelioration_du_site/CONTRIBUTING.md
     - amelioration_du_site/CODE_OF_CONDUCT.md
+    - amelioration_du_site/LICENSE.md
 
 
 
