--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ site_name: Dunasty8 - Los Galactique RP
 repo_url: https://github.com/Jefedi/dynasty8-Los-Galactique-RP.git
 
 # Nom du dépôt GitHub
-repo_name: Jefedi/dynasty8-Los-Galactique-RP
+repo_name: Jefedi/dynasty8
 
 # Navigation du site
 nav:
